test/expected/regression-net-connect.txt
/scripts/regression-net-connect.js:12
  throw error;
  ^

Error: connect ECONNREFUSED 127.0.0.1:24075
    at Object.exports._errnoException (util.js:874:11)
    at exports._exceptionWithHostPort (util.js:897:20)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1060:14)
    at fireErrorCallbacks (net.js:444:15)
    at Socket._destroy (net.js:480:3)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1065:10)
    at connect (net.js:819:26)
    at net.js:981:7
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:63:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:82:10)
    at lookup (dns.js:165:19)
    at lookupAndConnect (net.js:962:3)
    at Socket.connect (net.js:901:5)
    at Object.exports.connect.exports.createConnection (net.js:63:35)
    at Object.<anonymous> (/scripts/regression-net-connect.js:10:20)
    at Module._compile (module.js:425:26)
    at Object.Module._extensions..js (module.js:432:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:311:12)
    at Function.Module.runMain (module.js:457:10)
    at startup (node.js:134:18)
    at node.js:961:3
